feat: add domains (action, store)

--- a/SportBuddy/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/SportBuddy/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -234,6 +234,22 @@
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.mono0926.LicensePlist/Valet</string>
+			<key>Title</key>
+			<string>Valet</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.mono0926.LicensePlist/VisualEffectView</string>
+			<key>Title</key>
+			<string>VisualEffectView</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
 	</array>
 </dict>
 </plist>
