--- a/SportBuddy/SportBuddy/Info.plist
+++ b/SportBuddy/SportBuddy/Info.plist
@@ -30,5 +30,12 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>This app would like to use your camera.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
