--- a/.github/workflows/xcode-build.yml
+++ b/.github/workflows/xcode-build.yml
@@ -13,9 +13,13 @@ jobs:
       run:
         working-directory: SportBuddy
     name: Build and Test default scheme using any available iPhone simulator
-    runs-on: '13.4.1'
+    runs-on: macos-12
 
     steps:
+      - name: Specify default branch
+        run: git config --global init.defaultBranch main
+      - name: Select Xcode version
+        run: sudo xcode-select -s '/Applications/Xcode_14.0.app/Contents/Developer'
       - name: Checkout
         uses: actions/checkout@v3
       - name: Pod install
