--- a/SportBuddy/com.mono0926.LicensePlist.Output/com.mono0926.LicensePlist.plist
+++ b/SportBuddy/com.mono0926.LicensePlist.Output/com.mono0926.LicensePlist.plist
@@ -68,14 +68,6 @@
 		</dict>
 		<dict>
 			<key>File</key>
-			<string>com.mono0926.LicensePlist/Kingfisher</string>
-			<key>Title</key>
-			<string>Kingfisher</string>
-			<key>Type</key>
-			<string>PSChildPaneSpecifier</string>
-		</dict>
-		<dict>
-			<key>File</key>
 			<string>com.mono0926.LicensePlist/lottie-ios</string>
 			<key>Title</key>
 			<string>Lottie</string>
@@ -207,6 +199,14 @@
 			<string>com.mono0926.LicensePlist/VisualEffectView</string>
 			<key>Title</key>
 			<string>VisualEffectView</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.mono0926.LicensePlist/youtube-ios-player-helper</string>
+			<key>Title</key>
+			<string>YouTubeiOSPlayerHelper</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
